--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Numeritech</title>
+	<title>Coming Soon | Numeritech</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap" rel="stylesheet">
 </head>
-<body>
+<body style="background-color: #000000; color: #F9F9F9;">
 	<a href="https://grantwiggins.co"><img src="numeritech_logo.png" style="display: block; margin-left: auto; margin-right: auto; width: 50%; margin-top: 100px;"></a>
 	<h1 style="text-align: center; font-family: 'Montserrat', sans-serif; margin-top: 100px; font-size: 50px; font-weight: 600;">Website Status: <div style="font-weight: 400;">Coming Soon</div></h1>
 </body>
