--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap" rel="stylesheet">
 </head>
 <body style="background-color: #000000; color: #F9F9F9;">
-	<a href="https://grantwiggins.co"><img src="numeritech_logo.png" style="display: block; margin-left: auto; margin-right: auto; width: 50%; margin-top: 100px;"></a>
+	<a href="https://grantwiggins.net"><img src="numeritech_logo.png" style="display: block; margin-left: auto; margin-right: auto; width: 50%; margin-top: 100px;"></a>
 	<h1 style="text-align: center; font-family: 'Montserrat', sans-serif; margin-top: 100px; font-size: 50px; font-weight: 600;">Website Status: <div style="font-weight: 400;">Coming Soon</div></h1>
 </body>
 </html>
